Added item based collaborative filtering

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -1740,7 +1740,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Testing if order of users and services is the same as the order of their baselines"
+    "### Testing if order of users and services is the same as the order of their baselines\r\n",
+    "\r\n",
+    "And also storing the baselines"
    ],
    "metadata": {}
   },
@@ -2122,17 +2124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 137,
    "source": [
     "num_services = len(train_data['service'].values)\r\n",
-    "implicit_als_rank_score = rank_score(rankings=implicit_als_rankings, test_count=test_data, N=40)"
+    "implicit_als_rank_score = rank_score(rankings=implicit_als_rankings, test_count=train_data, N=40)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 138,
    "source": [
     "print('The MPR score for the Implicit ALS model is {} %'.format(implicit_als_rank_score))"
    ],
@@ -2141,10 +2143,429 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The rank score for the Implicit ALS model is 12.255283648498331 %\n"
+      "The MPR score for the Implicit ALS model is 10.504865879563305 %\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Normalizing the baseline values\r\n",
+    "We have to try two versions of normalization for item-based recommendation:\r\n",
+    "- Normalizing before calculating baselines\r\n",
+    "- Calculating baselines before normalizing"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Defining the normalizer class"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "source": [
+    "class Normalizer():\r\n",
+    "    def __init__(self):\r\n",
+    "        pass\r\n",
+    "\r\n",
+    "    def fit(self, values: np.ndarray):\r\n",
+    "        self.mean = values.mean()\r\n",
+    "        self.std = values.std()\r\n",
+    "\r\n",
+    "    def transform(self, values: np.ndarray):\r\n",
+    "        return (values - self.mean) / self.std\r\n",
+    "\r\n",
+    "    def fit_transform(self, values: np.ndarray):\r\n",
+    "        self.fit(values)\r\n",
+    "        return self.transform(values)\r\n",
+    "\r\n",
+    "    def inverse(self, values: np.ndarray):\r\n",
+    "        return (values * self.std) + self.mean"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Normalizing the data"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "source": [
+    "normalizer = Normalizer()\r\n",
+    "normalizer.fit(train_data.baseline.values)\r\n",
+    "train_data['normal_baseline'] = pd.Series(normalizer.transform(train_data.baseline.values))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "source": [
+    "train_data[['user', 'service', 'baseline', 'normal_baseline']].describe()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         baseline  normal_baseline\n",
+       "count  341.000000     3.410000e+02\n",
+       "mean    -0.668162    -3.906943e-18\n",
+       "std      8.377521     1.001470e+00\n",
+       "min     -9.218750    -1.022158e+00\n",
+       "25%     -3.590763    -3.493749e-01\n",
+       "50%     -1.948920    -1.531050e-01\n",
+       "75%     -0.434528     2.792917e-02\n",
+       "max     88.802974     1.069560e+01"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>baseline</th>\n",
+       "      <th>normal_baseline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>341.000000</td>\n",
+       "      <td>3.410000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-0.668162</td>\n",
+       "      <td>-3.906943e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.377521</td>\n",
+       "      <td>1.001470e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-9.218750</td>\n",
+       "      <td>-1.022158e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-3.590763</td>\n",
+       "      <td>-3.493749e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-1.948920</td>\n",
+       "      <td>-1.531050e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>-0.434528</td>\n",
+       "      <td>2.792917e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>88.802974</td>\n",
+       "      <td>1.069560e+01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 133
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "source": [
+    "normalizer = Normalizer()\r\n",
+    "normalizer.fit(train_data['size'].values)\r\n",
+    "train_data['normal'] = pd.Series(normalizer.transform(train_data['size'].values))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "source": [
+    "train_data[['user', 'service', 'size', 'normal']].describe()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "             size        normal\n",
+       "count  341.000000  3.410000e+02\n",
+       "mean     4.442815  6.251109e-17\n",
+       "std      9.445219  1.001470e+00\n",
+       "min      1.000000 -3.650391e-01\n",
+       "25%      1.000000 -3.650391e-01\n",
+       "50%      2.000000 -2.590099e-01\n",
+       "75%      4.000000 -4.695137e-02\n",
+       "max    103.000000  1.044994e+01"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>size</th>\n",
+       "      <th>normal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>341.000000</td>\n",
+       "      <td>3.410000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.442815</td>\n",
+       "      <td>6.251109e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.445219</td>\n",
+       "      <td>1.001470e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-3.650391e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-3.650391e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-2.590099e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>-4.695137e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>103.000000</td>\n",
+       "      <td>1.044994e+01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 136
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Item Neighbourhood model"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "source": [
+    "class SurpriseKnnBaselineModel(surprise.KNNBaseline):\r\n",
+    "    def rank_items(self, users: list, items: list):\r\n",
+    "        rankings: Dict[str, list] = {}\r\n",
+    "        for user in users:\r\n",
+    "            ranking_list = [self.predict(user, item, clip=False) for item in items]\r\n",
+    "            rankings_df = pd.DataFrame({\r\n",
+    "                'item': items,\r\n",
+    "                'ranking': ranking_list\r\n",
+    "            })\r\n",
+    "            rankings[user] = rankings_df.sort_values(by='ranking')['item'].values\r\n",
+    "        return rankings"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "source": [
+    "class SurpriseKnnNormalModel(surprise.KNNWithZScore):\r\n",
+    "    def rank_items(self, users: list, items: list):\r\n",
+    "        rankings: Dict[str, list] = {}\r\n",
+    "        for user in users:\r\n",
+    "            ranking_list = [self.predict(user, item, clip=False) for item in items]\r\n",
+    "            rankings_df = pd.DataFrame({\r\n",
+    "                'item': items,\r\n",
+    "                'ranking': ranking_list\r\n",
+    "            })\r\n",
+    "            rankings[user] = rankings_df.sort_values(by='ranking')['item'].values\r\n",
+    "        return rankings"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "source": [
+    "reader = surprise.Reader(rating_scale=(0, train_data['confidence'].max()))\r\n",
+    "train_dataset = surprise.Dataset.load_from_df(train_data[['user', 'service', 'baseline']], reader)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "source": [
+    "bsl_options = {'method': 'sgd',\r\n",
+    "               'n_epochs': 20,\r\n",
+    "               }\r\n",
+    "\r\n",
+    "sim_options = {'name': 'msd',\r\n",
+    "               'user_based': False  # compute  similarities between items\r\n",
+    "               }"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "source": [
+    "knn_baseline_model = SurpriseKnnBaselineModel(k=num_services, min_k=60, sim_options=sim_options, bsl_options=bsl_options)\r\n",
+    "knn_baseline_model.fit(train_dataset.build_full_trainset())\r\n",
+    "knn_baseline_rankings = knn_baseline_model.rank_items(users=train_data['user'].unique(), items=train_data['service'].unique())\r\n",
+    "\r\n",
+    "knn_normal_model = SurpriseKnnNormalModel(sim_options={'name': 'pearson_baseline', 'user_based': False})\r\n",
+    "knn_normal_model.fit(train_dataset.build_full_trainset())\r\n",
+    "knn_normal_rankings = knn_normal_model.rank_items(users=train_data['user'].unique(), items=train_data['service'].unique())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Estimating biases using sgd...\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "source": [
+    "num_services = len(train_data['service'].values)\r\n",
+    "knn_baseline_rank_score = rank_score(rankings=knn_baseline_rankings, test_count=train_data, N=40)\r\n",
+    "knn_normal_rank_score = rank_score(rankings=knn_normal_rankings, test_count=train_data, N=40)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "source": [
+    "print('The rank score for the KNN Baseline model is {} %'.format(knn_baseline_rank_score))\r\n",
+    "print('The rank score for the KNN Normal model is {} %'.format(knn_normal_rank_score))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The rank score for the KNN Baseline model is 22.679880388472828 %\n",
+      "The rank score for the KNN Normal model is 22.679880388472828 %\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "source": [
+    "for user in users:\r\n",
+    "    ranking_list1 = [knn_baseline_model.predict(user, item, clip=False) for item in services]\r\n",
+    "    rankings_df1 = pd.DataFrame({\r\n",
+    "        'item': services,\r\n",
+    "        'ranking': ranking_list1\r\n",
+    "    })\r\n",
+    "    predict1 = rankings_df1.sort_values(by='ranking')['item'].values\r\n",
+    "\r\n",
+    "    ranking_list2 = [knn_normal_model.predict(user, item, clip=False) for item in services]\r\n",
+    "    rankings_df2 = pd.DataFrame({\r\n",
+    "        'item': services,\r\n",
+    "        'ranking': ranking_list2\r\n",
+    "    })\r\n",
+    "    predict2 = rankings_df2.sort_values(by='ranking')['item'].values\r\n",
+    "    # print(ranking_list1 == ranking_list2)\r\n",
+    "    # print((ranking_list1))\r\n",
+    "    # print('\\n')\r\n",
+    "    # print(ranking_list2)\r\n",
+    "    # print('\\n\\n')\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
